tests/ui-unstable/non-lit.stderr
error: proc macro panicked
 --> $DIR/non-lit.rs:6:5
  |
6 |     indoc!(fail);
  |     ^^^^^^^^^^^^^
  |
  = help: message: argument must be a single string literal
